--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     username: root
     data-password: root
-    driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/manager?useUnicode=true&zeroDateTimeBehavior=convertToNull&autoReconnect=true&characterEncoding=utf-8
+    driver-class-name: com.mysql.cj.jdbc.Driver
 server:
     port: 8001
