--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,27 @@
 spring:
   datasource:
-    username: root
-    data-password: root
-    url: jdbc:mysql://localhost:3306/manager?useUnicode=true&zeroDateTimeBehavior=convertToNull&autoReconnect=true&characterEncoding=utf-8
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    name: druidDataSource
+    type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      driver: com.mysql.jdbc.cj.Driver
+      url: jdbc:mysql://localhost:3306/manager?serverTimezone=GMT%2B8&characterEncoding=utf8
+      username: root
+      password: root
+      filters: stat,wall,log4j,config   #配置监控统计拦截的filters,去掉后监控界面sql无法进行统计,wall用于防火墙
+      max-active: 100      #最大连接数
+      initial-size: 1      #初始化大小
+      max-wait: 60000       #获取连接等待超时时间
+      min-idle: 1         #最小连接数
+      time-between-eviction-runs-millis: 60000      #间隔多久才进行一次检测,检测需要关闭的空闲连接,单位毫秒
+      min-evictable-idle-time-millis: 300000    #一个连接在池中最小生存的事件,单位毫秒
+      validation-query: select 'x'
+      test-while-idle: true
+      test-on-borrow: false
+      test-on-return: false
+      pool-prepared-statements: true
+      max-open-prepared-statements: 50
+      max-pool-prepared-statement-per-connection-size: 20
 server:
     port: 8001
+logging:
+  config:
